# NG1-engine

./: .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  input.cpp  main.cpp  transform.cpp  transform.hpp
apps/primitives/: quad.cpp
apps/shaders/: fragment.glsl  vertex.glsl
include/: input.hpp  transform.hpp
include/NG1/: buffer.hpp  camera.hpp  engine.hpp  mesh.hpp  shader.hpp  state.hpp  transform.hpp  vao.hpp  vertex.hpp  window.hpp
include/NG1/primitives/: quad.hpp
include/glad/: glad.h
include/primitives/: quad.hpp
src/: CMakeLists.txt  buffer.cpp  camera.cpp  engine.cpp  glad.c  mesh.cpp  shader.cpp  state.cpp  transform.cpp  vao.cpp  vertex.cpp  window.cpp
src/primitives/: quad.cpp
